--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "node api/index.js"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
